@@ -359,6 +359,33 @@ class Framework_Washtml extends PHPUnit_Framework_TestCase
         $this->assertNotContains('TRACKING', $washed, "Src attribute of <video> tag (#5583)");
     }
 
+    /**
+     * Test external links
+     */
+    function test_extlinks()
+    {
+        $html = array(
+            array("<link href=\"http://TRACKING_URL/\">", true),
+            array("<link href=\"src:abc\">", false),
+            array("<img src=\"http://TRACKING_URL/\">", true),
+            array("<img src=\"data:image\">", false),
+        );
+
+        foreach ($html as $item) {
+            $washer = new rcube_washtml;
+            $washed = $washer->wash($item[0]);
+
+            $this->assertSame($item[1], $washer->extlinks);
+        }
+
+        foreach ($html as $item) {
+            $washer = new rcube_washtml(array('allow_remote' => true));
+            $washed = $washer->wash($item[0]);
+
+            $this->assertFalse($washer->extlinks);
+        }
+    }
+
     function test_textarea_content_escaping()
     {
         $html = '<textarea><p style="x:</textarea><img src=x onerror=alert(1)>">';
